[package]
name = "pfm"
version = "0.0.1"
authors = ["Zixian Cai <u5937495@anu.edu.au>"]
edition = "2018"
license = "MIT"
description = "Binding of libpfm4"
repository = "https://github.com/caizixian/pfm"
readme = "README.md"
documentation = "https://docs.rs/pfm"

[dependencies]
pfm-sys = {path = "./pfm-sys"}
perf-event-open-sys = {path = "./perf-event-open-sys"}
libc = "0.2.94"
