[package]
name = "pfm"
version = "0.0.1"
authors = ["Zixian Cai <u5937495@anu.edu.au>"]
edition = "2018"
license = "MIT"
description = "Binding of libpfm4"
repository = "https://github.com/caizixian/pfm"
readme = "README.md"
documentation = "https://docs.rs/pfm"

[dependencies]
pfm-sys = "0.0.8"
perf-event-open-sys = {path = "./perf-event-open-sys"}
libc = "0.2.94"
