[package]
name = "pfm"
version = "0.1.2"
authors = ["Zixian Cai <u5937495@anu.edu.au>"]
edition = "2021"
license = "MIT"
description = "High-level wrapper of libpfm4"
repository = "https://github.com/caizixian/pfm"
readme = "README.md"
documentation = "https://docs.rs/pfm"

[dependencies]
pfm-sys = {path = "./pfm-sys", version = "0.0.18"}
perf-event-open-sys = "4.0"
libc = "0.2"
log = "0.4"
