[package]
name = "pfm-sys"
version = "0.0.15+4.13.0-533633ad"
authors = ["Zixian Cai <u5937495@anu.edu.au>"]
edition = "2018"
license = "MIT"
description = "Binding of libpfm4"
repository = "https://github.com/caizixian/pfm/pfm-sys"
readme = "README.md"
documentation = "https://docs.rs/pfm-sys"

[build-dependencies]
bindgen = "0.63"
