[package]
name = "pfm-sys"
version = "0.0.16-libpfm4.13.0"
authors = ["Zixian Cai <u5937495@anu.edu.au>"]
edition = "2021"
license = "MIT"
description = "Binding of libpfm4"
repository = "https://github.com/caizixian/pfm/pfm-sys"
readme = "README.md"
documentation = "https://docs.rs/pfm-sys"

[build-dependencies]
bindgen = "0.68.1"
